# rust_aoc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
2015/day01/a/src/: main.rs
2015/day01/b/src/: main.rs
2015/day02/a/src/: main.rs
2015/day02/b/src/: main.rs
2015/day04/a/src/: main.rs
2015/day04/b/src/: main.rs
2015/day05/: README.md
2015/day05/a/src/: main.rs
2015/day05/b/src/: main.rs
2015/day06/: README.md
2015/day06/a/src/: main.rs  test.json
2015/day06/b/src/: main.rs
2015/day07/: README.md
2015/day07/a/src/: main.rs
2015/day07/b/src/: main.rs
src/: main.rs
