[package]
name = "rust_aoc"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "2015/day01/a",
    "2015/day01/b",
    "2015/day02/a",
    "2015/day02/b",
    "2015/day03/a",
    "2015/day03/b",
    "2015/day04/a",
    "2015/day04/b",
    "2015/day05/a",
    "2015/day05/b"
]

[dependencies]
